--- a/PadariaCarmel/PadariaCarmel.csproj
+++ b/PadariaCarmel/PadariaCarmel.csproj
@@ -112,6 +112,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="FrmCadastrarUsuarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmCadastrarUsuarios.Designer.cs">
+      <DependentUpon>FrmCadastrarUsuarios.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmCalcula.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -162,6 +168,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmCadastrarUsuarios.resx">
+      <DependentUpon>FrmCadastrarUsuarios.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmCalcula.resx">
       <DependentUpon>frmCalcula.cs</DependentUpon>
     </EmbeddedResource>
